js寄生式继承，原型式继承，寄生组合式继承

--- a/html/js高程原型模式练习.html
+++ b/html/js高程原型模式练习.html
@@ -22,6 +22,15 @@
         }
         friend.__proto__.sayName()
 
+        function Teacher(){}
+        function Student(){
+
+        }
+        Teacher.prototype=new Person()
+        console.log(new Teacher())
+        Student.prototype=Person.prototype
+        console.log(new Student())
+        
     </script>
 </body>
 
